upgrade to vaadin 18