@@ -17,9 +17,7 @@
         <maven.compiler.source>14</maven.compiler.source>
         <maven.compiler.target>14</maven.compiler.target>
 
-        <vaadin.version>14.2.3</vaadin.version>
-        <vaadin-install-nodejs>true</vaadin-install-nodejs>
-        <frontend-maven-plugin.nodeVersion>v13.2.0</frontend-maven-plugin.nodeVersion>
+        <vaadin.version>18.0.1</vaadin.version>
         <jetty.version>9.4.27.v20200227</jetty.version>
     </properties>
 
@@ -39,35 +37,8 @@
 
         <dependency>
             <groupId>com.vaadin</groupId>
-            <artifactId>vaadin-core</artifactId>
-            <exclusions>
-                <!-- Webjars are only needed when running in Vaadin 13 compatibility 
-                    mode -->
-                <exclusion>
-                    <groupId>com.vaadin.webjar</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.webjars.bowergithub.insites</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.webjars.bowergithub.polymer</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.webjars.bowergithub.polymerelements</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.webjars.bowergithub.vaadin</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.webjars.bowergithub.webcomponents</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>
+            <!-- Replace artifactId with vaadin-core to use only free components -->
+            <artifactId>vaadin</artifactId>
         </dependency>
 
         <dependency>
@@ -209,9 +180,12 @@
                 </executions>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <!-- newer version work well with JUnit5 -->
-                <version>2.22.1</version>
+                <version>3.0.0-M3</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
             </plugin>
         </plugins>
         <finalName>app</finalName>
@@ -219,13 +193,17 @@
 
     <profiles>
         <profile>
-            <id>vaadin-install-nodejs</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-                <property>
-                    <name>vaadin-install-nodejs</name>
-                </property>
-            </activation>
+            <!-- Production mode is activated using -Pproduction -->
+            <id>production</id>
+            <properties>
+                <vaadin.productionMode>true</vaadin.productionMode>
+            </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>com.vaadin</groupId>
+                    <artifactId>flow-server-production-mode</artifactId>
+                </dependency>
+            </dependencies>
             <build>
                 <plugins>
                     <plugin>
@@ -235,88 +213,15 @@
                         <executions>
                             <execution>
                                 <goals>
-                                    <goal>prepare-frontend</goal>
                                     <goal>build-frontend</goal>
                                 </goals>
+                                <phase>compile</phase>
                             </execution>
                         </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>com.github.eirslett</groupId>
-                        <artifactId>frontend-maven-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <!-- optional: you don't really need execution ids, but it looks nice in your build log. -->
-                                <id>install node and npm</id>
-                                <goals>
-                                    <goal>install-node-and-npm</goal>
-                                </goals>
-                                <!-- optional: default phase is "generate-resources" -->
-                                <phase>generate-resources</phase>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <nodeVersion>${frontend-maven-plugin.nodeVersion}</nodeVersion>
-                            <!-- optional: with node version greater than 4.0.0 will use npm provided by node distribution -->
-                            <!-- npmVersion>${frontend-maven-plugin.npmVersion}</npmVersion -->
-                            <!-- optional: where to download node and npm from. Defaults to https://nodejs.org/dist/ -->
-                            <!-- <downloadRoot>http://myproxy.example.org/nodejs/</downloadRoot> -->
-                        </configuration>
                     </plugin>
                 </plugins>
             </build>
         </profile>
-	    <profile>
-	        <id>production</id>
-	        <properties>
-	            <vaadin.productionMode>true</vaadin.productionMode>
-	        </properties>
-	        <dependencies>
-	            <dependency>
-	                <groupId>com.vaadin</groupId>
-	                <artifactId>flow-server-production-mode</artifactId>
-	            </dependency>
-	        </dependencies>
-	        <build>
-            <plugins>
-                <plugin>
-                    <groupId>com.vaadin</groupId>
-                    <artifactId>vaadin-maven-plugin</artifactId>
-                    <version>${vaadin.version}</version>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>prepare-frontend</goal>
-                                <goal>build-frontend</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
-                <plugin>
-	                <groupId>com.github.eirslett</groupId>
-	                <artifactId>frontend-maven-plugin</artifactId>
-	                <executions>
-	                    <execution>
-	                        <!-- optional: you don't really need execution ids, but it looks nice in your build log. -->
-	                        <id>install node and npm</id>
-	                        <goals>
-	                            <goal>install-node-and-npm</goal>
-	                        </goals>
-	                        <!-- optional: default phase is "generate-resources" -->
-	                        <phase>generate-resources</phase>
-	                    </execution>
-	                </executions>
-	                <configuration>
-	                    <nodeVersion>${frontend-maven-plugin.nodeVersion}</nodeVersion>
-	                    <!-- optional: with node version greater than 4.0.0 will use npm provided by node distribution -->
-	                    <!-- npmVersion>${frontend-maven-plugin.npmVersion}</npmVersion -->
-	                    <!-- optional: where to download node and npm from. Defaults to https://nodejs.org/dist/ -->
-	                    <!-- <downloadRoot>http://myproxy.example.org/nodejs/</downloadRoot> -->
-	                </configuration>
-	            </plugin>
-            </plugins>
-        </build>
-	    </profile>
     </profiles>
-
 </project>
+
